--- a/src/index.scss
+++ b/src/index.scss
@@ -1,7 +1,10 @@
+@import "./styleutils/variables.scss";
+
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
+  color: $main-text-color;
 }
 
 body {
