--- a/src/index.scss
+++ b/src/index.scss
@@ -13,3 +13,16 @@ body {
   min-width: 320px;
   min-height: 100vh;
 }
+
+ul {
+  margin: 0;
+  padding: 0;
+}
+
+button {
+  background: none;
+  outline: none;
+  margin: 0;
+  padding: 0;
+  border: none;
+}
