--- a/src/pages/MainPage/MainPage.scss
+++ b/src/pages/MainPage/MainPage.scss
@@ -1,9 +1,9 @@
 .page {
-  margin-block: 1.5rem;
+  margin-block: 1em;
 
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 2rem;
-  width: 100%;
+  gap: 1.5rem;
+  margin-inline: 2em;
 }
