--- a/src/components/PlaceItem/PlaceItem.scss
+++ b/src/components/PlaceItem/PlaceItem.scss
@@ -1,7 +1,7 @@
 @import "../../styleutils/variables.scss";
 
 .placeitem {
-  width: 90%;
+  width: 100%;
   background: $main-color;
   border-radius: 0.8em;
   padding: 2rem 2rem;
@@ -10,11 +10,10 @@
   height: 10rem;
   display: flex;
   justify-content: center;
+  color: $main-text-color;
 
   &__content {
     display: flex;
-    justify-content: space-between;
-    align-items: center;
     width: 100%;
 
     &--disabled {
@@ -27,6 +26,13 @@
     flex-direction: column;
     gap: 0.5em;
     font-weight: 600;
+  }
+
+  &__link {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
   }
 
   &__wrap {
