--- a/src/components/PlaceList/PlaceList.scss
+++ b/src/components/PlaceList/PlaceList.scss
@@ -1,12 +1,23 @@
 .place-list {
-  display: flex;
+  width: 100%;
+
+  &__list {
+    display: flex;
   flex-direction: column;
   gap: 1rem;
   width: 100%;
+  margin-bottom: 1em;
+  }
 
   &__item {
     display: flex;
     align-items: center;
     justify-content: center;
+  }
+
+  &__title {
+    text-align: left;
+    font-size: 1.2rem;
+    width: 100%;
   }
 }
