--- a/src/components/CurrentConditions/CurrentConditions.scss
+++ b/src/components/CurrentConditions/CurrentConditions.scss
@@ -1,5 +1,9 @@
-.current-condition {
+@import "../../styleutils/variables.scss";
 
+.current-condition {
+  background: $background-color;
+  padding: 1rem 1rem 1.6rem 1rem;
+  border-radius: 0.6rem;
 
   &__container {
     display: flex;
