--- a/src/App.scss
+++ b/src/App.scss
@@ -2,4 +2,10 @@
   position: fixed;
   bottom: 1rem;
   right: 1rem;
+
+  &__logo {
+    height: 10em;
+    width: 10em;
+    font-size: 30px;
+  }
 }
